--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -48,6 +48,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/button1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginStart="16dp"
