--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -9,7 +9,11 @@
         android:id="@+id/homeFragment"
         android:name="com.sawadikap.sawadikap.ui.main.home.HomeFragment"
         android:label="Home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_homeFragment_to_testFragment"
+            app:destination="@id/testFragment" />
+    </fragment>
     <fragment
         android:id="@+id/wardrobeFragment"
         android:name="com.sawadikap.sawadikap.ui.main.wardobe.WardrobeFragment"
@@ -20,4 +24,9 @@
         android:name="com.sawadikap.sawadikap.ui.main.history.HistoryFragment"
         android:label="History"
         tools:layout="@layout/fragment_history" />
+    <fragment
+        android:id="@+id/testFragment"
+        android:name="com.sawadikap.sawadikap.ui.main.TestFragment"
+        android:label="fragment_test"
+        tools:layout="@layout/fragment_test" />
 </navigation>
