--- a/app/src/main/res/layout/fragment_wardrobe.xml
+++ b/app/src/main/res/layout/fragment_wardrobe.xml
@@ -12,10 +12,9 @@
         android:layout_height="?actionBarSize"
         android:elevation="8dp" />
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/clothesRecycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/wardrobe" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
