--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -6,10 +6,10 @@
         android:title="@string/home" />
     <item
         android:id="@+id/wardrobeFragment"
-        android:icon="@drawable/ic_home"
+        android:icon="@drawable/ic_hanger"
         android:title="@string/wardrobe" />
     <item
         android:id="@+id/historyFragment"
-        android:icon="@drawable/ic_home"
+        android:icon="@drawable/ic_history"
         android:title="@string/history" />
 </menu>
