finish intro layout

--- a/app/src/main/res/layout/fragment_intro_page_3.xml
+++ b/app/src/main/res/layout/fragment_intro_page_3.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
-        android:text="Mengapa Sawadikap?"
+        android:text="Bergabung bersama kami!"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,7 +21,7 @@
         android:layout_height="241dp"
         android:layout_marginTop="91dp"
         android:layout_marginBottom="93dp"
-        android:src="@drawable/ic_intro_celebration"
+        android:src="@drawable/ic_intro_super_thank_you"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="205dp"
-        android:text="Kami percaya berbagi dengan sesama adalah\nkegiatan positif yang seharusnya dapat dilakukan\ndengan mudah"
+        android:text="Jadi bagian dari kami, unggah pakaianmu, dan\nberbagi dengan sesama"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
