--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -18,14 +18,17 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="64dp" />
 
-    <TextView
+    <Button
         android:id="@+id/introButton"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="64dp"
-        android:text="Lanjut" />
+        android:layout_marginBottom="48dp"
+        android:gravity="center"
+        android:text="Lanjut"
+        android:textColor="@color/colorPrimary" />
 
 </RelativeLayout>
