--- a/app/src/main/res/layout/fragment_intro_page_1.xml
+++ b/app/src/main/res/layout/fragment_intro_page_1.xml
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="205dp"
-        android:text="alskdjlakdjlkasjdlkajslkdjlaksjdlkajsdlkaskld\njlaksdasdasdsadasdasd\njdnfkshdfjksdflksajdlkjjjjjjjjj"
+        android:text="Sawadikap adalah platform sedekah pakaian\npertama di Indonesia yang memudahkan\npenggunanya untuk berbagi pakaian dimanapun,\nkapanpun"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
