--- a/app/src/main/res/layout/item_clothes.xml
+++ b/app/src/main/res/layout/item_clothes.xml
@@ -2,18 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="240dp"
     android:orientation="vertical">
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="8dp"
         android:clickable="true"
         android:focusable="true"
+        android:layout_margin="4dp"
         android:foreground="?selectableItemBackground"
-        app:cardCornerRadius="16dp"
-        app:cardElevation="8dp">
+        app:cardCornerRadius="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,7 +23,7 @@
                 android:id="@+id/clothImage"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="2"
+                android:layout_weight="3"
                 android:src="@color/colorPrimary" />
 
             <RelativeLayout
@@ -38,8 +37,7 @@
                     android:id="@+id/clothName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Nama Baju"
-                    android:textSize="20sp" />
+                    android:text="Nama Baju" />
 
                 <TextView
                     android:id="@+id/clothStatus"
@@ -48,8 +46,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
                     android:text="Status Baju"
-                    android:textColor="@android:color/holo_red_dark"
-                    android:textSize="20sp" />
+                    android:textColor="@android:color/holo_red_dark" />
 
             </RelativeLayout>
 
