--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -33,16 +33,15 @@
             app:cardElevation="8dp">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="330dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="104dp"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginTop="32dp"
-                    android:layout_marginEnd="104dp"
                     android:text="@string/app_name"
                     android:textSize="24sp" />
 
@@ -75,17 +74,18 @@
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/loginButton"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="72dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
                     android:backgroundTint="@color/colorPrimary"
-                    android:text="Masuk" />
+                    android:text="Masuk"
+                    app:cornerRadius="8dp" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/signupButton"
                     style="@style/Widget.MaterialComponents.Button.TextButton"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="72dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="32dp"
