--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -45,42 +45,73 @@
                     android:text="Daftar"
                     android:textSize="24sp" />
 
-                <com.google.android.material.textfield.TextInputLayout
+                <com.libizo.CustomEditText
+                    android:id="@+id/emailEditText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
-                    android:layout_marginBottom="16dp">
+                    android:layout_marginBottom="16dp"
+                    android:hint="Alamat Email"
+                    android:inputType="textEmailAddress"
+                    app:libIZO_setBorderView="true"
+                    app:libIZO_setCornerRadius="16dp"
+                    app:libIZO_setStrokeWidth="1dp" />
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
+                <com.libizo.CustomEditText
+                    android:id="@+id/fullNameEditText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
-                    android:layout_marginBottom="32dp">
+                    android:layout_marginBottom="16dp"
+                    android:hint="Nama Lengkap"
+                    android:inputType="textPersonName"
+                    app:libIZO_setBorderView="true"
+                    app:libIZO_setCornerRadius="16dp"
+                    app:libIZO_setStrokeWidth="1dp" />
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                <com.libizo.CustomEditText
+                    android:id="@+id/passwordEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:hint="Kata Sandi"
+                    android:inputType="textPassword"
+                    app:libIZO_setBorderView="true"
+                    app:libIZO_setCornerRadius="16dp"
+                    app:libIZO_setStrokeWidth="1dp" />
 
-                </com.google.android.material.textfield.TextInputLayout>
+                <com.libizo.CustomEditText
+                    android:id="@+id/passwordConfirmationEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="32dp"
+                    android:hint="Konfirmasi Kata Sandi"
+                    android:inputType="textPassword"
+                    app:libIZO_setBorderView="true"
+                    app:libIZO_setCornerRadius="16dp"
+                    app:libIZO_setStrokeWidth="1dp" />
 
                 <com.google.android.material.button.MaterialButton
-                    android:id="@+id/loginButton"
+                    android:id="@+id/signUpButton"
                     android:layout_width="match_parent"
-                    android:layout_height="72dp"
+                    android:layout_height="64dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="32dp"
                     android:backgroundTint="@color/colorPrimary"
                     android:text="Daftar"
-                    app:cornerRadius="8dp" />
+                    android:textAllCaps="false"
+                    app:cornerRadius="16dp" />
 
             </LinearLayout>
 
