--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -113,12 +113,13 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/mainCounter"
                     style="@style/mainCounterText"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
-                    android:text="1" />
+                    tools:text="1" />
 
                 <ImageView
                     android:layout_width="32dp"
