--- a/app/src/main/res/layout/item_trophy.xml
+++ b/app/src/main/res/layout/item_trophy.xml
@@ -21,19 +21,23 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_marginEnd="16dp"
+                app:cardBackgroundColor="@color/colorPrimary"
                 app:cardCornerRadius="8dp">
 
-                <ImageView
+                <TextView
+                    android:id="@+id/requirements"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/colorPrimary"
+                    android:gravity="center"
                     android:padding="16dp"
-                    android:src="@drawable/ic_trophy"
-                    android:tint="@color/white" />
+                    android:textColor="@color/white"
+                    android:textSize="32sp"
+                    tools:text="1" />
 
             </com.google.android.material.card.MaterialCardView>
 
             <TextView
+                android:id="@+id/trophyName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
